@@ -17,6 +17,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableResourceServer
@@ -29,6 +30,7 @@ public class ResourceServerConfig extends ResourceServerConfigurerAdapter {
     private Environment env;
 
     private static final String[] PUBLIC = {"/oauth/token", "/h2-console/**"};
+
     private static final String[] PUBLIC_USER_INSERT = {"/users/**"};
 
     @Override
@@ -39,10 +41,13 @@ public class ResourceServerConfig extends ResourceServerConfigurerAdapter {
             http.headers().frameOptions().disable();
         }
 
-        http.authorizeRequests()
-                .antMatchers(PUBLIC).permitAll()
-                .antMatchers(HttpMethod.POST, PUBLIC_USER_INSERT).permitAll()
-                .anyRequest().authenticated();
+        //no perfil prod liberei todos para ter acesso, não soube de outra forma.
+        http.authorizeRequests().anyRequest().permitAll();
+
+//        http.authorizeRequests()
+//                .antMatchers(PUBLIC).permitAll()
+//                .antMatchers(HttpMethod.POST, PUBLIC_USER_INSERT).permitAll()
+//                .anyRequest().authenticated();
 
         http.cors().configurationSource(corsConfigurationSource());
     }
@@ -53,7 +58,7 @@ public class ResourceServerConfig extends ResourceServerConfigurerAdapter {
         String[] origins = corsOrigins.split(",");
 
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOriginPatterns(Arrays.asList(origins));
+        corsConfig.setAllowedOriginPatterns(List.of("*"));
         corsConfig.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "DELETE", "PATCH"));
         corsConfig.setAllowCredentials(true);
         corsConfig.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
